# satscaler

./: .gitignore  README.md  pyproject.toml
satscaler/: data_reader.py  satscaler.py  scaler.py
